# ironclaw

./: .coverage-baseline.json  .gitignore  .pre-commit-config.yaml  .pre-commit-test.yaml  AGENT_TASK.md  CLAUDE.md  COMPLETION_SUMMARY.md  FIX_SUMMARY.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  MERGE_COMPLETE.md  Makefile  PHASE_2_1_COMPLETION.md  PHASE_2_2_PARALLEL_IMPLEMENTATION.md  PLATFORMS.md  PLATFORM_SUPPORT_STATUS.md  PR_115_REVIEW.md  PR_REVIEW.md  PR_REVIEW_107_JULES.md  PR_REVIEW_68.md  PR_REVIEW_78.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY_2026_02_14.md  WAVE4_COMPLETION_REPORT.md  WEEK4_COMPLETION_REPORT.md  WEEK4_IMPLEMENTATION_PLAN.md  WEEK6_COMPLETION_REPORT.md  WEEK6_IMPLEMENTATION_PLAN.md  ironclaw_prd.md
orchestrator/: Cargo.toml
orchestrator/benches/: mcp_startup.rs
orchestrator/proptest-regressions/vm/jailer/: config.txt
orchestrator/src/: agent_rpc.rs  lib.rs  main.rs  mcp_command.rs
orchestrator/src/approval/: mod.rs  tui.rs
orchestrator/src/mcp/: client.rs  http_transport.rs  integration.rs  mod.rs  protocol.rs  retry.rs  transport.rs
orchestrator/src/mcp/client/: tests.rs
orchestrator/src/mcp/protocol/: tests.rs
orchestrator/src/mcp/retry/: tests.rs
orchestrator/src/mcp/transport/: tests.rs
orchestrator/src/vm/: agent.rs  apple_hv.rs  approval_cliff_tests.rs  builder.rs  config.rs  e2e_tests.rs  firecracker.rs  firewall.rs  firewall_tests.rs  hyperv.rs  integration_tests.rs  jailer.rs  mod.rs  pool.rs  rootfs.rs  seccomp.rs  signature.rs  snapshot.rs  tests.rs  tests.rs.backup  vsock.rs
orchestrator/tests/: cli.rs
(+162 files in other folders)
