[package]
name = "ironclaw-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["IronClaw Contributors"]
description = "Local-first Agentic AI Runtime - Rust Orchestrator"
license = "MIT"
repository = "https://github.com/your-username/ironclaw"
readme = "../README.md"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# MCP client (Model Context Protocol)
# TODO: Add MCP client crate when available
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

[dev-dependencies]
# Property-based testing
proptest = "1.4"

# Testing utilities
criterion = "0.5"

[[bin]]
name = "ironclaw"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
